--- a/index.html
+++ b/index.html
@@ -11,38 +11,30 @@
     <title>Quiz</title>
 </head>
 <body>
-    <div class="wrapper">
-<div class="container" id="quiz">
-    <div class="quiz-header">
-        <h2 id="questions"> Question</h2>
-        <ul>
+    <div class="quiz-container" id="quiz">
+        <div class="quiz-header">
+          <h2 id="question">Question Text</h2>
+          <ul>
             <li>
-                <input type="radio" name="answer" id="a" class="ans">
-                <label for="a" id="a-text">Answer</label>
+              <input type="radio" name="answer" id="a" class="answer">
+              <label for="a" id="a_text">Answer</label>
             </li>
-
             <li>
-                <input type="radio" name="answer" id="b" class="ans">
-                <label for="b" id="b-text">Answer</label>
+              <input type="radio" name="answer" id="b" class="answer">
+              <label for="b" id="b_text">Answer</label>
             </li>
-
             <li>
-                <input type="radio" name="answer" id="c" class="ans">
-                <label for="c" id="c-text">Answer</label>
+              <input type="radio" name="answer" id="c" class="answer">
+              <label for="c" id="c_text">Answer</label>
             </li>
-
             <li>
-                <input type="radio" name="answer" id="d" class="ans">
-                <label for="d" id="d-text">Answer</label>
+              <input type="radio" name="answer" id="d" class="answer">
+              <label for="d" id="d_text">Answer</label>
             </li>
-            
-        </ul>
-    </div>
-    <button id="submit">Submit</button> 
-</div>  
-
-
-</div>
+          </ul>
+        </div>
+        <button id="submit">Submit</button>
+      </div>
 
     <script src="script.js"></script>
 </body>
